The is The core of my site

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <title>Olofnuggets Personal Site</title>
-
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body>
+<body >
     <table cellspacing="20">
         <tr>
             <td>
