--- a/contact-me.html
+++ b/contact-me.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="utf-8">
     <title>Contact Me</title>
+    <link rel="stylesheet" href="css/styles.css">
 
 </head>
-    <body>
+    <body >
       <h2>My Contact Data</h2>
     <p><a href="https://www.linkedin.com/in/yousef-kanzouaa-1b3a09238/">My linkedin</a></p>
     <p><a href="https://github.com/olofnuggts">My Github</a></p>
