--- a/BetterStyling/index.html
+++ b/BetterStyling/index.html
@@ -24,7 +24,7 @@
         <div class="profile">
             <img src="images/profile picture.jpg" alt="profile picture">
             <h2>Hello</h2>
-            <p>My name is olofnuggts (which is obviously not true), am student at the Universty of 
+            <p class ="intro">My name is olofnuggts (which is obviously not true), am student at the Universty of 
                 Westflische Hochschule. I am studying Computer Science.
             </p>
         </div>
@@ -49,7 +49,7 @@
             <h2>Get In Touch</h2>
             <h3>If you love Software Developing and Basketball like I do. 
             </h3>
-            <p>Let's talk about it and we can Code while we discouse about games,spors 
+            <p class="contact-mesa">Let's talk about it and we can Code while we discouse about games,spors 
                 or many diffrents thing.</p>
             <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
         </div>
