--- a/BetterStyling/index.html
+++ b/BetterStyling/index.html
@@ -60,7 +60,7 @@
         <a class="footer-link" href="https://www.linkedin.com/in/yousef-kanzouaa-1b3a09238/">LinkedIn</a>
         <a class="footer-link" href="https://github.com/olofnuggts">Github</a>
 
-        <p>© Name Olofnuggts.</p>
+        <p class="copy_write">© Name Olofnuggts.</p>
     </div>
 
 
