Finish Secound Website

--- a/BetterStylingv2/TinDog-Start/index.html
+++ b/BetterStylingv2/TinDog-Start/index.html
@@ -38,13 +38,13 @@
           <a class="navbar-brand" href="">olofnuggets</a>
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="">Contact</a>
+              <a class="nav-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Pricing</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Download</a>
+              <a class="nav-link" href="#">Download</a>
             </li>
           </ul>
         </div>
@@ -197,7 +197,7 @@
 
 
       </div>
-      <div class="card col-lg-4 col-md-12">
+      <div class=" card col-lg-4 col-md-12">
         <div class="card-header">
           <h3>Mastiff</h3>
         </div>
@@ -220,9 +220,12 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+
+    <h3 class ="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
+
+    <button class ="download-button btn btn-lg btn-dark" type="button"><i class="fa-brands fa-apple"></i> Download</button>
+    <button  class ="download-button btn btn-outline-light btn-lg download-button" type="button"><i
+        class="fa-brands fa-google-play"></i> Download</button>
 
   </section>
 
@@ -230,7 +233,9 @@
   <!-- Footer -->
 
   <footer id="footer">
-
+    <i class="social-icons fa-brands fa-linkedin fa-2x"></i>
+    <i class="social-icons fa-solid fa-envelope fa-2x"></i>
+    <i class="social-icons fa-brands fa-github fa-2x"></i>
     <p>© Copyright TinDog</p>
 
   </footer>
